[package]
name = "dodo-payment"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.12", features = ["full"] }
jwt = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
uuid = { version = "1.16.0", features = ["v4"] }
